fix flexbox wrap bug last row

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,7 @@ h1 {
 .playlist-card:empty {
   height: 0;
   border: none;
+  width: 200px;
 }
 .activitylist-left {
   height: 65vh;
